# bbtr

./: README.md  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt
docs/: index.md  philosophie.md
docs/communication/: communaute.md  index.md  partenaires.md  reseaux.md  rgpd.md
docs/foo/: baz.md  index.md
docs/foo/bar/: index.md  yay.md
docs/jourj/: index.md
docs/outils/: index.md
docs/preparation/: arbitres.md  artistes.md  communication.md  equipe.md  goodies.md  index.md  inscriptions.md  lots.md  salle.md  shop.md  sides.md  stream.md
includes/: abbreviations.md
