[tool.poetry]
name = "bbtr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
